Table machines {
  machine_id int [pk, increment]
  machine_code varchar(20) [unique, not null]
  machine_name varchar(100) [not null]
  machine_type varchar(50) [not null]
  production_line varchar(50) [not null]
  location varchar(100) [not null]
  installation_date date [not null]
  status varchar(20) [not null, note: 'Active, Maintenance, Retired']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table employees {
  employee_id int [pk, increment]
  employee_code varchar(20) [unique, not null]
  employee_name varchar(100) [not null]
  role varchar(20) [not null, note: 'Technician, Operator, Supervisor, Inspector, Manager']
  department varchar(50) [not null]
  hire_date date [not null]
  status varchar(10) [not null, note: 'Active, Inactive']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table suppliers {
  supplier_id int [pk, increment]
  supplier_code varchar(20) [unique, not null]
  supplier_name varchar(100) [not null]
  contact_phone varchar(20)
  contact_email varchar(100)
  lead_time_days int [not null]
  reliability_score decimal(5,2) [not null, default: 0.00]
  country varchar(50) [not null]
  status varchar(10) [not null, note: 'Active, Inactive']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table inventory {
  item_id int [pk, increment]
  item_code varchar(20) [unique, not null]
  item_name varchar(100) [not null]
  category varchar(20) [not null, note: 'Raw Material, Component, Finished Good']
  quantity_in_stock int [not null]
  warehouse_location varchar(20) [not null]
  reorder_level int [not null]
  unit_of_measure varchar(20) [not null]
  status varchar(15) [not null, note: 'Active, Discontinued']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table work_orders {
  order_id int [pk, increment]
  work_order_number varchar(20) [unique, not null]
  machine_id int [not null]
  item_id int [not null]
  product_name varchar(100) [not null]
  quantity_planned int [not null]
  quantity_completed int [not null]
  priority varchar(10) [not null, note: 'Low, Medium, High, Critical']
  start_time datetime [not null]
  end_time datetime
  status varchar(15) [not null, note: 'Open, In Progress, Completed, Cancelled']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table maintenance_logs {
  log_id int [pk, increment]
  log_code varchar(20) [unique, not null]
  machine_id int [not null]
  employee_id int [not null]
  issue_type varchar(50) [not null]
  issue_description text [not null]
  reported_time datetime [not null]
  resolved_time datetime
  resolution_notes text
  status varchar(15) [not null, note: 'Open, In Progress, Resolved']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table downtime_events {
  event_id int [pk, increment]
  event_code varchar(20) [unique, not null]
  machine_id int [not null]
  start_time datetime [not null]
  end_time datetime
  duration_minutes int
  reason varchar(100) [not null]
  severity varchar(10) [not null, note: 'Low, Medium, High']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table purchase_orders {
  po_id int [pk, increment]
  po_number varchar(20) [unique, not null]
  supplier_id int [not null]
  item_id int [not null]
  quantity int [not null]
  order_date date [not null]
  expected_delivery_date date [not null]
  actual_delivery_date date
  status varchar(10) [not null, note: 'Ordered, Delivered, Cancelled']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table shift_logs {
  shift_log_id int [pk, increment]
  shift_code varchar(20) [unique, not null]
  employee_id int [not null]
  shift_date date [not null]
  shift_type varchar(10) [not null, note: 'Day, Evening, Night']
  start_time datetime [not null]
  end_time datetime
  notes text
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table quality_checks {
  check_id int [pk, increment]
  qc_code varchar(20) [unique, not null]
  machine_id int [not null]
  work_order_id int [not null]
  product_name varchar(100) [not null]
  result varchar(5) [not null, note: 'Pass, Fail']
  defect_type varchar(50) [not null]
  inspection_date datetime [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

// ─── Relationships ────────────────────────────────

Ref: work_orders.machine_id > machines.machine_id
Ref: work_orders.item_id > inventory.item_id

Ref: maintenance_logs.machine_id > machines.machine_id
Ref: maintenance_logs.employee_id > employees.employee_id

Ref: downtime_events.machine_id > machines.machine_id

Ref: purchase_orders.supplier_id > suppliers.supplier_id
Ref: purchase_orders.item_id > inventory.item_id

Ref: shift_logs.employee_id > employees.employee_id

Ref: quality_checks.machine_id > machines.machine_id
Ref: quality_checks.work_order_id > work_orders.order_id

// ─── Table Groups ─────────────────────────────────

TableGroup master_tables [color: #1a3a5c] {
  machines
  employees
  suppliers
  inventory
}

TableGroup transactional_tables [color: #0f6e56] {
  work_orders
  maintenance_logs
  downtime_events
  purchase_orders
  shift_logs
  quality_checks
}